Reordering now works by a single ID and moves that item down in the list; The add route now expects the parameter ID as a passed parameter rather than as part of the query string; A few style tweaks; Note: a bug seems to be happening on iPhone whereby the menu icon is not clickable so there is no way to navigate or log in;

--- a/webroot/css/main.less
+++ b/webroot/css/main.less
@@ -439,6 +439,14 @@ table {
             }
         }
 
+        td {
+            vertical-align: top;
+
+            a {
+                padding: 0;
+            }
+        }
+
         th {
             background-color: rgba(235, 235, 250, 1);
         }
